// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea default 1`] = `
.c0 label {
  color: #575756;
  font-size: 16px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: 0.3px;
  -moz-letter-spacing: 0.3px;
  -ms-letter-spacing: 0.3px;
  letter-spacing: 0.3px;
  line-height: 2.5;
}

.c0 textarea {
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #898988;
  width: 100%;
  min-height: 70px;
  max-height: 15em;
  background-color: #ffffff;
  border: solid 1px #cdcdcd;
  resize: vertical;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea:focus {
  outline: none;
  box-shadow: 0 0 0 1px rgba(4,212,191,0.2);
  border-color: #04d4bf;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::-moz-placeholder {
  color: #bfbfbf;
}

.c0 textarea:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::placeholder {
  color: #bfbfbf;
}

.c0 .required {
  padding-left: 10px;
  color: red;
}

<div
  className="c0"
>
  Default
  <textarea
    disabled={false}
    onInput={[Function]}
    placeholder=""
    style={Object {}}
  />
</div>
`;

exports[`Storyshots Textarea disabled 1`] = `
.c0 label {
  color: #575756;
  font-size: 16px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: 0.3px;
  -moz-letter-spacing: 0.3px;
  -ms-letter-spacing: 0.3px;
  letter-spacing: 0.3px;
  line-height: 2.5;
}

.c0 textarea {
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #898988;
  width: 100%;
  min-height: 70px;
  max-height: 15em;
  background-color: #ffffff;
  border: solid 1px #cdcdcd;
  resize: vertical;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea:focus {
  outline: none;
  box-shadow: 0 0 0 1px rgba(4,212,191,0.2);
  border-color: #04d4bf;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::-moz-placeholder {
  color: #bfbfbf;
}

.c0 textarea:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::placeholder {
  color: #bfbfbf;
}

.c0 .required {
  padding-left: 10px;
  color: red;
}

<div
  className="c0"
>
  Disabled
  <textarea
    disabled={true}
    onInput={[Function]}
    placeholder=""
    style={Object {}}
  />
</div>
`;

exports[`Storyshots Textarea required 1`] = `
.c0 label {
  color: #575756;
  font-size: 16px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: 0.3px;
  -moz-letter-spacing: 0.3px;
  -ms-letter-spacing: 0.3px;
  letter-spacing: 0.3px;
  line-height: 2.5;
}

.c0 textarea {
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #898988;
  width: 100%;
  min-height: 70px;
  max-height: 15em;
  background-color: #ffffff;
  border: solid 1px #cdcdcd;
  resize: vertical;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea:focus {
  outline: none;
  box-shadow: 0 0 0 1px rgba(4,212,191,0.2);
  border-color: #04d4bf;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.c0 textarea::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::-moz-placeholder {
  color: #bfbfbf;
}

.c0 textarea:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0 textarea::placeholder {
  color: #bfbfbf;
}

.c0 .required {
  padding-left: 10px;
  color: red;
}

<div
  className="c0"
>
  Mandatory
  <span
    className="required"
  >
    (required)
  </span>
  <textarea
    disabled={false}
    onInput={[Function]}
    placeholder=""
    style={Object {}}
  />
</div>
`;
